# ForecastLabAI

./: .env.example  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  INITIAL-0.md  INITIAL-1.md  INITIAL-10.md  INITIAL-11.md  INITIAL-11A.md  INITIAL-11B.md  INITIAL-11C.md  INITIAL-12.md  INITIAL-13.md  INITIAL-2.md  INITIAL-3.md  INITIAL-4.md  INITIAL-5.md  INITIAL-6.md  INITIAL-7.md  INITIAL-8.md  INITIAL-9.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: cd-release.yml  ci.yml  dependency-check.yml  phase-snapshot.yml  schema-validation.yml
PRPs/: PRP-0-project-foundation.md  PRP-1-repo-governance-cicd.md  PRP-10-agentic-layer.md  PRP-11-forecastlab-dashboard.md  PRP-11A-frontend-setup.md  PRP-11B-dashboard-architecture.md  PRP-11C-validation.md  PRP-12-randomized-database-seeder.md  PRP-13-data-seeder-dashboard.md  PRP-2-data-platform-schema.md  PRP-3-ingest-layer.md  PRP-4-feature-engineering.md  PRP-5-forecasting.md  PRP-6-backtesting.md  PRP-7-model-registry.md  PRP-8-serving-layer.md  PRP-9-rag-knowledge-base.md  VALIDATION-REPORT-11C.md
alembic/: env.py  script.py.mako
alembic/versions/: 37e16ecef223_create_jobs_table.py  a2f7b3c8d901_create_model_registry_tables.py  b4c8d9e0f123_create_rag_tables.py  c5d9e1f2g345_rag_dynamic_embedding_dimension.py  d6e0f2g3h456_create_agent_session_table.py  e1165ebcef61_create_data_platform_tables.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  exceptions.py  health.py  logging.py  middleware.py  problem_details.py
app/core/tests/: __init__.py  conftest.py  test_config.py  test_health.py  test_logging.py  test_middleware.py
app/features/: __init__.py
app/features/agents/: __init__.py  deps.py  models.py  routes.py  schemas.py  service.py  websocket.py
app/features/analytics/: __init__.py  routes.py  schemas.py  service.py
app/features/backtesting/: __init__.py  metrics.py  routes.py  schemas.py  service.py  splitter.py
app/features/data_platform/: __init__.py  models.py  schemas.py
app/features/dimensions/: __init__.py  routes.py  schemas.py  service.py
app/features/featuresets/: __init__.py  routes.py  schemas.py  service.py
app/features/forecasting/: __init__.py  models.py  persistence.py  routes.py  schemas.py  service.py
app/features/ingest/: __init__.py  routes.py  schemas.py  service.py
app/features/jobs/: __init__.py  models.py  routes.py  schemas.py  service.py
app/features/rag/: __init__.py  chunkers.py  embeddings.py  models.py  routes.py  schemas.py  service.py
app/features/registry/: __init__.py  models.py  routes.py  schemas.py  service.py  storage.py
app/shared/: __init__.py  models.py  schemas.py  utils.py
docs/: ARCHITECTURE.md  DAILY-FLOW.md  DATA-SEEDER.md  GIT-GITHUB-GUIDE.md  PHASE-FLOW.md  PHASE-index.md  rag-ollama-setup.md
docs/ADR/: ADR-0001-template.md  ADR-0002-frontend-architecture-vite-spa-first.md  ADR-0003-vector-storage-pgvector-in-postgres.md  ADR-INDEX.md
docs/PHASE/: 0-INIT_PHASE.md  1-DATA_PLATFORM.md  10-DASHBOARD.md  2-INGEST_LAYER.md  3-FEATURE_ENGINEERING.md  4-FORECASTING.md  5-BACKTESTING.md  6-MODEL_REGISTRY.md  7-SERVING_LAYER.md  8-RAG_KNOWLEDGE_BASE.md  9-AGENTIC_LAYER.md
docs/github/: github-IMPLEMENTATION-SUMMARY.md  github-complete-reference.md  github-quickstart.md
docs/validation/: logging-standard.md  mypy-standard.md  pyright-standard.md  pytest-standard.md  ruff-standard.md
examples/: compute_features_demo.py  e2e_smoke.sh  registry_demo.py  seed_demo_data.py
examples/api/: health.http  ingest_sales_daily.http
examples/backtest/: inspect_splits.py  metrics_demo.py  run_backtest.py
examples/ci/: local_checks.sh
examples/models/: baseline_mavg.py  baseline_naive.py  baseline_seasonal.py  model_interface.md
examples/queries/: exog_join.sql  kpi_sales.sql
examples/rag/: index_docs.py  query.http
examples/schema/: README.md
examples/seed/: README.md  config_holiday.yaml  config_sparse.yaml
frontend/: .env.example  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: check_db.py  seed_random.py
tests/: __init__.py  conftest.py
(+142 files in other folders)
